Fixed events on mobile

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -286,3 +286,6 @@ input[type=range]+.thumb.active .value {
 #dropin-container {
     margin-bottom:30px;
 }
+.fc-scroller {
+    height: 500px !important;
+}
